# QMessenger

./: CMakeLists.txt
install/include/: qmessenger.h  receiver.h  sender.h  todo.h
install/lib/: LibQMessenger.lib  LibQMessengerD.lib
source/: main.cpp  qmessenger.cpp  receiver.cpp  sender.cpp  todo.cpp
